Editing and Saving!
Got experimental NBT opening, editing, and saving working! You can open existing files from your file system by either the file input menu, or with drag and drop.

I already made sure that it works on desktop and mobile too! It works excellent on Safari, so you can even edit NBT files from your phone.

This is definitely the most bare-bones stage of this project, as this is just where it's getting started :D

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
 <body>
 
-<h1>Dovetail</h1>
-<p>A cross-platform NBT editor built on the web!</p>
+<header>
+  <button id="saver" disabled>Save</button>
+  <input id="opener" type="file" accept="application/octet-stream, application/gzip, .nbt, .dat">
+</header>
+
+<textarea id="editor" placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
 
 <script type="module" src="./src/app.js"></script>
 
