--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <input id="opener" type="file" accept="application/octet-stream, application/gzip, .nbt, .dat">
 </header>
 
-<textarea id="editor" placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
+<textarea id="editor" disabled placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
 
 <script type="module" src="./src/app.js"></script>
 
