--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <textarea id="editor" disabled placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
 
-<script type="module" src="./src/app.js"></script>
+<script type="module" src="./dist/app.js"></script>
 
 </body>
 
