--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 
 <title>Dovetail</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta name="color-scheme" content="light dark">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Dovetail">
 
 <link rel="stylesheet" href="./styles.css">
 
