--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 
 <title>Dovetail</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
 <meta name="color-scheme" content="light dark">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Dovetail">
+<meta name="theme-color" content="#445985">
+<link rel="manifest" href="./manifest.webmanifest">
+<link rel="icon" type="image/png" sizes="16x16" href="./resources/icon-16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./resources/icon-32.png">
 
 <link rel="stylesheet" href="./styles.css">
 
@@ -17,6 +19,7 @@
 <body>
 
 <header>
+  <img height="32" src="./resources/app-512.png">
   <button id="saver" disabled>Save</button>
   <input id="opener" type="file" accept="application/octet-stream, application/gzip, .nbt, .dat">
 </header>
