Web Share iOS + WCO Window Dragging
Added Web Share API support for iOS devices! I only use it there because I like that share dialog better than the normal Safari file download one.

Realized I forgot to add `-webkit-app-region: drag` styling to the app header for Window Controls Overlay mode, added that here! :)

Hid the app's file input in favor of a more plain and simple, 'Open' button. This will simply click the file input, which still exists, it's just hidden to make the header UI a bit more streamlined. I also did this so I can make more room for saving-config form elements, as I'm going to add dropdowns that allow you to toggle the output format of the file you opened. Currently just re-save your NBT file in the same format as you opened it in. Once I add the config options menus, this will make it easier to just allow you to make plain NBT files from scratch in any format, as the form controls for how to save those will already be present there.

Oh yeah! Also was gonna be part of the last update, I made it so the app's header title will update to show the name of the file you opened.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 <body>
 
 <header>
-  <img height="32" src="./resources/app-512.png">
+  <img height="32" draggable="false" src="./resources/app-512.png">
+  <button onclick="fileOpener.click();">Open</button>
+  <input id="fileOpener" type="file" accept="application/octet-stream, application/gzip, .nbt, .dat">
   <button id="saver" disabled>Save</button>
-  <input id="opener" type="file" accept="application/octet-stream, application/gzip, .nbt, .dat">
 </header>
 
 <textarea id="editor" disabled placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
