--- a/index.html
+++ b/index.html
@@ -91,18 +91,7 @@
   </form>
 </dialog>
 
-<script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1.7.0/dist/es-module-shims.js"></script>
-
-<script type="importmap">
-  {
-    "imports": {
-      "@stardazed/streams-compression": "https://cdn.jsdelivr.net/npm/@stardazed/streams-compression@1.0.0/+esm",
-      "nbtify": "https://cdn.jsdelivr.net/npm/nbtify@1.20.1/dist/index.js"
-    }
-  }
-</script>
-
-<script type="module" src="./dist/app.js"></script>
+<script type="module" src="./src/app.ts"></script>
 
 </body>
 
