GZIP Mime Types + JSDoc
Realized that I don't think the gzip file mime type is being used for the file type checking, so I removed it from the File Input and File Handling API validations.

Also realized the description for `openFile()` wasn't right.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header>
   <img height="32" draggable="false" src="./resources/app-512.png">
   <button onclick="fileOpener.click();">Open</button>
-  <input id="fileOpener" type="file" accept="application/octet-stream, application/gzip, .nbt, .dat">
+  <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat">
   <button id="saver" disabled>Save</button>
   <button id="formatOpener" disabled>Format Options...</button>
 </header>
