--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
   </form>
 </dialog>
 
-<script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1.7.0/dist/es-module-shims.js"></script>
+<script async src="./node_modules/es-module-shims/dist/es-module-shims.js"></script>
 
 <script type="importmap">
   {
     "imports": {
-      "@stardazed/streams-compression": "https://cdn.jsdelivr.net/npm/@stardazed/streams-compression@1.0.0/+esm",
-      "nbtify": "https://cdn.jsdelivr.net/npm/nbtify@1.20.1/dist/index.js"
+      "compression-streams-polyfill/ponyfill": "./node_modules/compression-streams-polyfill/ponyfill/esm.mjs",
+      "fflate": "./node_modules/fflate/esm/browser.js",
+      "nbtify": "./node_modules/nbtify/dist/index.js"
     }
   }
 </script>
