Strict Mode Dialog
Bringing the latest NBTify changes over to Dovetail! The first of the features is the new handling for strict mode, which allows for files that have trailing bytes at the end to be opened, if specified by the user. Since I want to ensure no data to be lost as much as possible, I made it visible to the user when the file they are trying to open has trailing bytes at the end of the file. Since some files have this intentionally it may seem (LCE?), I'm making this optional to decide which way you'd like to handle it. It's possible that there actually is an error, and NBTify isn't reading all of the data correctly, or that the file just actually is a little bigger than the NBT data itself that it holds. I think that may be what's going on for the LCE player files, and other NBT libraries appear to skip over the rest of the file, even though it goes as unread. So this seemed a bit unsafe to me, as with NBTify's format auto-detection, you can't always be sure that the extra bytes not being read is intentional or not, because it might just be reading it in the wrong format. I have seen it where NBTify can successfully open a file early using a different format, when there are still a lot of bytes left, and they actually do hold what the NBT data should be. So this could be dangerous to the user's data if this isn't managed safely and made visible during the reading steps.

Noticed that `.dat_old` files couldn't be opened, so I added them as a file association too.

I tried adding NBTify's new Deflate-Raw handling into the Format Options menu to allow Deflate-Raw inputs and outputs, but I tried opening a file I wrote with Deflate-Raw in the editor, and realized that NBTify currently doesn't have a way to auto-detect Deflate-Raw, which means Dovetail also doesn't have a way to open files compressed with that. It will simply error out and not be able to open the file, because Deflate-Raw is something that it knows how to handle, but isn't something that it 

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header>
   <img height="32" draggable="false" src="./resources/app-512.png">
   <button onclick="fileOpener.click();">Open</button>
-  <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat">
+  <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat, .dat_old">
   <button id="saver" disabled>Save</button>
   <button id="formatOpener" disabled>Format Options...</button>
 </header>
@@ -73,7 +73,7 @@
       </label>
       <label>
         <input type="radio" name="compression" value="deflate">
-        zlib
+        deflate (zlib)
       </label>
     </fieldset>
 
@@ -81,11 +81,8 @@
       <legend>Bedrock Level</legend>
 
       <label>
-        <input type="number" name="bedrockLevel" placeholder="&lt;false&gt;" min="0" max="4294967295" list="bedrockLevelVersion">
+        <input type="number" name="bedrockLevel" placeholder="&lt;false&gt;" min="0" max="4294967295">
         <code>(Uint32)</code>
-        <datalist id="bedrockLevelVersion">
-          <option value="8">(Most common)</option>
-        </datalist>
       </label>
     </fieldset>
   </form>
