NBTify Deflate-Raw
Bringing Dovetail up to the latest version of NBTify! That means that now there is support for Deflate-Raw compressed files! This update was waiting on fixes for some additional compression errors in NBTify that went unnoticed in the tests I wrote for Node, because Node has a different streams implementation which was behaving differently, and is passing the tests unexpectedly, meaning the extra unhandled errors were only happening in the browser.

https://github.com/Offroaders123/Dovetail/issues/1

--- a/index.html
+++ b/index.html
@@ -63,18 +63,26 @@
     <fieldset>
       <legend>Compression</legend>
 
-      <label>
-        <input type="radio" name="compression" value="none">
-        None
-      </label>
-      <label>
-        <input type="radio" name="compression" value="gzip">
-        gzip
-      </label>
-      <label>
-        <input type="radio" name="compression" value="deflate">
-        deflate (zlib)
-      </label>
+      <div>
+        <label>
+          <input type="radio" name="compression" value="none">
+          None
+        </label>
+        <label>
+          <input type="radio" name="compression" value="gzip">
+          gzip
+        </label>
+      </div>
+      <div>
+        <label>
+          <input type="radio" name="compression" value="deflate">
+          deflate (zlib)
+        </label>
+        <label>
+          <input type="radio" name="compression" value="deflate-raw">
+          deflate-raw
+        </label>
+      </div>
     </fieldset>
 
     <fieldset>
