Proper Vector Iconset!
Yay! Got it working! Just decided to render the model at a higher resolution, then convert that bitmap image to a vector SVG using Photopea. Then I brought that into Figma, and made a duplicate of my icon generator project for STE, which has presets for all of the different image layout sizes. I exported the initial ones I have prepared essentially, since I don't really have a design idea for maskable nor macOS or iOS-specific icons yet.

Also, after Photopea generates the SVG XML, I simplify it using my coding skills (lol) since there are only a certain set of things that an SVG file really has to have. Then I run that through svgminify.com, which shrinks the <path> declarations down a bit more than they are exported. Also, kinda goofed. This step happens before the Figma stage.

Later down the road, similarly to what I did with STE's logo, I probably will simplify the shapes of the vector icon base, since Photopea's path detection doesn't always make straight lines. So I probably have to fix some of the edges there. They look much better than the original bitmap image though, so I don't need to fix it right now, because having something better at all is just an improvement.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <meta name="color-scheme" content="light dark">
 <meta name="theme-color" content="#445985">
 <link rel="manifest" href="./manifest.webmanifest">
-<link rel="icon" type="image/png" sizes="16x16" href="./icon-16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./icon-32.png">
+<link rel="icon" type="image/svg+xml" href="./icon.svg">
+<link rel="alternate icon" type="image/png" sizes="16x16" href="./icon-16.png">
+<link rel="alternate icon" type="image/png" sizes="32x32" href="./icon-32.png">
 
 <link rel="stylesheet" href="./styles.css">
 
@@ -19,7 +20,7 @@
 <body>
 
 <header>
-  <img height="32" draggable="false" src="./app-512.png">
+  <img draggable="false" src="./icon.svg" alt="">
   <button onclick="fileOpener.click();">Open</button>
   <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat, .dat_old">
   <button id="saver" disabled>Save</button>
