--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <button id="formatOpener" disabled>Format Options...</button>
 </header>
 
-<textarea id="editor" disabled placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
+<nbt-tree id="editor" disabled placeholder="NBT data will show here..."></nbt-tree>
 
 <dialog id="formatDialog">
   <form id="formatForm" method="dialog">
