--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <button id="formatOpener" disabled>Format Options...</button>
 </header>
 
-<nbt-tree id="editor" disabled placeholder="NBT data will show here..."></nbt-tree>
+<nbt-tree id="editor"></nbt-tree>
 
 <dialog id="formatDialog">
   <form id="formatForm" method="dialog">
