Proper Box Handling
Overflow for the tree view now doesn't expand past the intended area!

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <button id="formatOpener" disabled>Format Options...</button>
 </header>
 
+<main>
+
 <nbt-tree id="editor"></nbt-tree>
 
 <dialog id="formatDialog">
@@ -96,6 +98,8 @@
     </fieldset>
   </form>
 </dialog>
+
+</main>
 
 <script type="module" src="./src/app.ts"></script>
 
