--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 <main>
 
-<nbt-tree id="editor"></nbt-tree>
+<textarea id="editor" disabled placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
+<nbt-tree id="tree"></nbt-tree>
 
 <dialog id="formatDialog">
   <form id="formatForm" method="dialog">
