--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat, .dat_old">
   <button id="saver" disabled>Save</button>
   <button id="formatOpener" disabled>Format Options...</button>
+  <label style="margin-inline-start: auto;">
+    <input id="treeViewToggle" type="checkbox">
+    Tree View
+  </label>
 </header>
 
 <main>
@@ -97,11 +101,6 @@
         <code>(Uint32)</code>
       </label>
     </fieldset>
-
-    <label>
-      <input type="checkbox" name="treeView">
-      Tree View (Experimental)
-    </label>
   </form>
 </dialog>
 
