Svelte: The Deep Dive
Gonna do it. If I'm gonna start using Svelte, I have to start using it first. That's the best way to put it!

Took some of the setup from `npm create vite@latest`, and brought it to here with some changes to fit it into Dovetail's styles and formatting. Not sure about all of the things it changes yet, but I'm gonna have myself not worry about that for the time being, as I think that's what holding me back about it.

Here's to learning new things!

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
 <meta name="color-scheme" content="light dark">
 <meta name="theme-color" content="#445985">
-<link rel="manifest" href="./manifest.webmanifest">
-<link rel="icon" type="image/svg+xml" href="./icon.svg">
-<link rel="alternate icon" type="image/png" sizes="16x16" href="./icon-16.png">
-<link rel="alternate icon" type="image/png" sizes="32x32" href="./icon-32.png">
+<link rel="manifest" href="/manifest.webmanifest">
+<link rel="icon" type="image/svg+xml" href="/icon.svg">
+<link rel="alternate icon" type="image/png" sizes="16x16" href="/icon-16.png">
+<link rel="alternate icon" type="image/png" sizes="32x32" href="/icon-32.png">
 
-<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="/styles.css">
 
 </head>
 
 <body>
 
 <header>
-  <img draggable="false" src="./icon.svg" alt="">
+  <img draggable="false" src="/icon.svg" alt="">
   <button onclick="fileOpener.click();">Open</button>
   <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat, .dat_old">
   <button id="saver" disabled>Save</button>
@@ -106,7 +106,7 @@
 
 </main>
 
-<script type="module" src="./src/app.ts"></script>
+<script type="module" src="/src/app.ts"></script>
 
 </body>
 
