--- a/index.html
+++ b/index.html
@@ -14,100 +14,10 @@
 <link rel="alternate icon" type="image/png" sizes="32x32" href="/icon-32.png">
 
 <link rel="stylesheet" href="/styles.css">
+<script type="module" src="/src/main.ts"></script>
 
 </head>
 
-<body>
-
-<header>
-  <img draggable="false" src="/icon.svg" alt="">
-  <button onclick="fileOpener.click();">Open</button>
-  <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat, .dat_old">
-  <button id="saver" disabled>Save</button>
-  <button id="formatOpener" disabled>Format Options...</button>
-  <label style="margin-inline-start: auto;">
-    <input id="treeViewToggle" type="checkbox">
-    Tree View
-  </label>
-</header>
-
-<main>
-
-<textarea id="editor" disabled placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
-<nbt-tree id="treeView"></nbt-tree>
-
-<dialog id="formatDialog">
-  <form id="formatForm" method="dialog">
-    <dialog-header>
-      <h3>Format Options</h3>
-      <button type="submit" aria-label="Close">✕</button>
-    </dialog-header>
-
-    <fieldset>
-      <legend>Root Name</legend>
-
-      <label>
-        <input type="text" name="name" placeholder="&lt;empty&gt;" autocomplete="off">
-      </label>
-      <label>
-        <input type="checkbox" name="disableName" onchange="this.form.elements.name.disabled = this.checked;">
-        Disable
-      </label>
-    </fieldset>
-
-    <fieldset>
-      <legend>Endian</legend>
-
-      <label>
-        <input type="radio" name="endian" value="big">
-        Big
-      </label>
-      <label>
-        <input type="radio" name="endian" value="little">
-        Little
-      </label>
-    </fieldset>
-
-    <fieldset>
-      <legend>Compression</legend>
-
-      <div>
-        <label>
-          <input type="radio" name="compression" value="none">
-          None
-        </label>
-        <label>
-          <input type="radio" name="compression" value="gzip">
-          gzip
-        </label>
-      </div>
-      <div>
-        <label>
-          <input type="radio" name="compression" value="deflate">
-          deflate (zlib)
-        </label>
-        <label>
-          <input type="radio" name="compression" value="deflate-raw">
-          deflate-raw
-        </label>
-      </div>
-    </fieldset>
-
-    <fieldset>
-      <legend>Bedrock Level</legend>
-
-      <label>
-        <input type="number" name="bedrockLevel" placeholder="&lt;false&gt;" min="0" max="4294967295">
-        <code>(Uint32)</code>
-      </label>
-    </fieldset>
-  </form>
-</dialog>
-
-</main>
-
-<script type="module" src="/src/app.ts"></script>
-
-</body>
+<body></body>
 
 </html>
