--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="alternate icon" type="image/png" sizes="16x16" href="/icon-16.png">
 <link rel="alternate icon" type="image/png" sizes="32x32" href="/icon-32.png">
 
-<link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="/styles/styles.css">
 <script type="module" src="/src/main.ts"></script>
 
 </head>
