--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="alternate icon" type="image/png" sizes="16x16" href="/icon-16.png">
 <link rel="alternate icon" type="image/png" sizes="32x32" href="/icon-32.png">
 
-<script type="module" src="/src/main.ts"></script>
+<script type="module" src="/src/index.ts"></script>
 
 </head>
 
