--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header>
   <img draggable="false" src="./icon.svg" alt="">
   <button onclick="fileOpener.click();">Open</button>
-  <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat, .dat_old">
+  <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat, .dat_old, .mcstructure, .litematic, .schem, .schematic">
   <button id="saver" disabled>Save</button>
   <button id="formatOpener" disabled>Format Options...</button>
   <label style="margin-inline-start: auto;">
