--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <meta name="color-scheme" content="light dark">
 <meta name="theme-color" content="#445985">
 <link rel="manifest" href="./manifest.webmanifest">
-<link rel="icon" type="image/svg+xml" href="./icon.svg">
-<link rel="alternate icon" type="image/png" sizes="16x16" href="./icon-16.png">
-<link rel="alternate icon" type="image/png" sizes="32x32" href="./icon-32.png">
+<link rel="icon" type="image/svg+xml" href="./img/icon.svg">
+<link rel="alternate icon" type="image/png" sizes="16x16" href="./img/icon-16.png">
+<link rel="alternate icon" type="image/png" sizes="32x32" href="./img/icon-32.png">
 
-<link rel="stylesheet" href="./src/styles.scss">
+<link rel="stylesheet" href="./src/index.scss">
 
 </head>
 
 <body>
 
 <header>
-  <img draggable="false" src="./icon.svg" alt="">
+  <img draggable="false" src="./img/icon.svg" alt="">
   <button onclick="fileOpener.click();">Open</button>
   <input id="fileOpener" type="file" accept="application/octet-stream, .nbt, .dat, .dat_old, .mcstructure, .litematic, .schem, .schematic">
   <button id="saver" disabled>Save</button>
