--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 </main>
 
-<script type="module" src="./src/app.ts"></script>
+<script type="module" src="./src/app.tsx"></script>
 
 </body>
 
