--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <main>
 
 <textarea id="editor" disabled placeholder="NBT data will show here..." wrap="off" spellcheck="false" autocomplete="off" autocapitalize="none" autocorrect="off"></textarea>
-<nbt-tree id="treeView"></nbt-tree>
+<!-- Temporarily placed here, incrementally moving to JSX -->
+<div id="root"></div>
 
 <dialog id="formatDialog">
   <form id="formatForm" method="dialog">
