--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div id="root"></div>
 
-<script type="module" src="./src/app.tsx"></script>
+<script type="module" src="./src/index.tsx"></script>
 
 </body>
 
