OpenGraph Meta Tags (Partial)
Still need a proper README for the project, as well as demo screenshots, and an OpenGraph image to render for link sharing. Got these from STE, nice and simple to add these few extra nice things.

I didn't add these back when I made the project, I wanted to leave it until a later point when the project was more established (now :D).

https://www.opengraph.xyz/ (Great tool, have used before for adding these to STE as well!)

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <title>Dovetail</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
+  <meta name="author" content="Brandon Bennett">
+  <meta name="description" content="A cross-platform NBT editor built on the web!">
+  <meta property="og:title" content="Dovetail">
+  <meta property="og:description" content="A cross-platform NBT editor built on the web!">
+  <!-- <meta property="og:image" content=""> -->
+  <meta property="og:url" content="https://offroaders123.github.io/Dovetail/">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#445985">
+  <base href="./" target="_blank">
+  <link rel="canonical" href="https://offroaders123.github.io/Dovetail/">
   <link rel="manifest" href="./manifest.webmanifest">
   <link rel="icon" type="image/svg+xml" href="./img/icon.svg">
   <link rel="alternate icon" type="image/png" sizes="16x16" href="./img/icon-16.png">
